# Panodeon

./: .gitignore  LICENSE  README.md  download_model.bat  pyproject.toml  run_app.bat  run_app_rocm.sh  run_colmap.bat  setup.bat  setup_gpu_cuda.bat  setup_gpu_directml.bat  setup_gpu_rocm.sh  setup_third_party.bat
configs/sampler/: default.json
configs/stella/: equirectangular_2k.yaml  equirectangular_8k.yaml
docs/: config.md  setup.md  usage.md
examples/configs/sampler/: default.json
patches/: README.md  stella_vslam-windows.patch  stella_vslam_examples-windows.patch
scripts/: run_app.ps1  run_app_rocm.sh  setup_colmap.ps1  setup_env.ps1  setup_env_cuda.ps1  setup_env_directml.ps1  setup_env_rocm.sh  setup_model.ps1  setup_stella.ps1
src/colmap_mask/: app.py
src/colmap_mask/core/: colmap_export.py  video_extract.py
src/colmap_mask/generators/: cubemap.py  direct.py  subprocess_cubemap.py
src/colmap_mask/inference/: deim_wholebody.py
src/colmap_mask/projection/: cubemap.py  perspective.py
src/colmap_mask/sampler/: __init__.py  cli.py  events.py  orb.py  video.py  workflow.py
src/colmap_mask/tools/: cubemap_worker.py  download_model.py  generate_cubemap_mask.py  run_colmap.py  setup_colmap.py  setup_third_party.py
src/colmap_mask/ui/: image_canvas.py  main_window.py  workers.py
src/panodeon/: app.py
src/panodeon/core/: colmap_export.py  image_io.py  mask_ops.py  overlay.py  project_state.py
src/panodeon/generators/: base.py  cubemap.py  direct.py  subprocess_cubemap.py
src/panodeon/inference/: deim_wholebody.py  providers.py
src/panodeon/projection/: cubemap.py  perspective.py
src/panodeon/sampler/: __init__.py  events.py  io.py  models.py  pipeline.py  resume.py  sampling.py  video_cli.py  (+3 more)
tests/: test_align_colmap_stella_rot.py  test_colmap_export.py  test_core.py  test_deim_wholebody.py  test_image_canvas.py  test_image_io.py  test_main_window.py  test_projection.py  test_providers.py  test_run_colmap.py  test_sampler_events.py  test_sampler_steps.py  test_subprocess_cubemap.py  test_video_extract.py
(+9 files in other folders)
