[project]
name = "panodeon"
version = "0.1.0"
description = "PanoSfM toolkit: turn 360 panoramas and video into COLMAP-ready perspective tiles and masks for Structure-from-Motion."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "pyside6>=6.6",
    "av>=12.0",
]

[project.optional-dependencies]
inference = [
    "onnxruntime>=1.17",
]
gpu-cuda = [
    "onnxruntime-gpu[cuda,cudnn]>=1.21",
]
gpu-directml = [
    "onnxruntime-directml>=1.17",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
panodeon = "panodeon.app:main"
panodeon-run-colmap = "panodeon.tools.run_colmap:main"
panodeon-sample = "panodeon.sampler.cli:main"
panodeon-sample-video = "panodeon.sampler.video_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
